[project]
name = "start-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "gradio>=5.45.0",
    "huggingface-hub>=0.34.4",
    "importnb>=2023.11.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.4",
    "lxml>=6.0.1",
    "nest-asyncio>=1.6.0",
    "patchright>=1.55.1",
    "playwright>=1.55.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.1",
    "transformers>=4.55.2",
    "typing>=3.10.0.0",
]
